# ACE-Step-1.5

./: .gitignore  AGENTS.md  README.md  check_update.bat  install_uv.bat  merge_config.bat  pyproject-xpu.toml  pyproject.toml  quick_test.bat  requirements.txt  run_acestep.py  start_api_server.bat  start_gradio_ui.bat  start_gradio_ui_macos.sh  start_gradio_ui_manual.bat  start_gradio_ui_xpu.bat  start_gradio_ui_xpu.sh  test_env_detection.bat  test_git_update.bat
acestep/: acestep_v15_pipeline.py  api_server.py  audio_utils.py  dataset_handler.py  gradio_ui.py  handler.py  inference.py  llm_inference.py  model_downloader.py  openrouter_adapter.py
acestep/api/: job_generation_setup.py  job_generation_setup_test.py  job_runtime_state.py  job_runtime_state_test.py  llm_generation_inputs.py
acestep/api/http/: audio_route.py  audio_route_http_test.py  audio_route_test.py  model_init_service.py  model_init_service_test.py  model_service_routes.py  release_task_request_builder.py  release_task_request_builder_test.py  release_task_request_parser.py  release_task_request_parser_test.py  sample_format_routes.py
acestep/gradio_ui/events/: results_handlers.py  training_handlers.py
acestep/gradio_ui/i18n/: en.json  he.json  ja.json  zh.json
acestep/gradio_ui/interfaces/: generation.py  training.py
acestep/models/base/: modeling_acestep_v15_base.py
acestep/third_parts/nano-vllm/: pyproject.toml
acestep/training/: data_module.py  dataset_builder.py  lora_injection.py  trainer.py
acestep/training_v2/: trainer_helpers.py
docs/en/: API.md  DCW.md  GRADIO_GUIDE.md  INFERENCE.md
openrouter/: openrouter_api_server.py
ui/: studio.html  studio_html_test.py
(+71 files in other folders)
